public/style.css
@import url("https://fonts.googleapis.com/css2?family=Barlow:wght@400;700&display=swap");

:root {
  --body-bg-light: #eef8ff;
  --accent-dark-1: #1d3557;
  --accent-light-2: #457b9d;
  --accent-dark-2: #305890;
  --accent-light-1: #b7843d;
  --text-dark-color: #1a1819;
  --text-light-color: #eef8ff;

  --large-text: 3rem;
  --medium-text: 2rem;
  --small-text: 1.25rem;

  --box-shadow: 0 2px 5px rgba(0, 0, 0, 0.25);
  --box-rounded-corners: 5px;
}

html {
  scroll-behavior: smooth;
  font-size: 1rem;
  overflow-x: hidden;
}

body {
  background-color: var(--body-bg-light);
  background-image: url("data:image/svg+xml,%3Csvg width='52' height='26' viewBox='0 0 52 26' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Cg fill='%23457b9d' fill-opacity='0.12'%3E%3Cpath d='M10 10c0-2.21-1.79-4-4-4-3.314 0-6-2.686-6-6h2c0 2.21 1.79 4 4 4 3.314 0 6 2.686 6 6 0 2.21 1.79 4 4 4 3.314 0 6 2.686 6 6 0 2.21 1.79 4 4 4v2c-3.314 0-6-2.686-6-6 0-2.21-1.79-4-4-4-3.314 0-6-2.686-6-6zm25.464-1.95l8.486 8.486-1.414 1.414-8.486-8.486 1.414-1.414z' /%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
  font-family: "Barlow", sans-serif;
  font-size: 1.25rem;
  margin: 0;
  box-sizing: border-box;

  min-height: 100vh;
  width: 100vw;
  position: relative;
}

section {
  display: flex;
  flex-flow: column nowrap;
  justify-content: center;
  align-items: center;

  min-height: 100vh;
  text-align: center;
}

h1 {
  font-size: 3rem;
}

h2 {
  font-size: 2rem;
}

a {
  text-decoration: none;
  color: unset;
}

/* Navbar */
.navbar {
  background: var(--accent-dark-1);
  color: var(--text-light-color);
  display: flex;
  flex-flow: row nowrap;
  justify-content: space-between;
  align-items: center;
  box-shadow: var(--box-shadow);
  min-height: 50px;

  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  z-index: 10;

  overflow-x: hidden;
  box-sizing: border-box;
}

.navbar-brand {
  padding: 0 1rem;
}

.navbar-contents {
  display: flex;
  flex-flow: row nowrap;
}

.navbar-item {
  padding: 1rem;
}

.navbar-item:hover {
  background: var(--accent-dark-2);
}

.nav-border {
  border-right: 2px solid #fff;
}

#navbar-toggle {
  display: none;
  font-size: 1rem;
}

.navbar-contents-collapse {
  display: none;
}

/* Section: Header */
.header {
  box-sizing: border-box;
}

.header-img {
  border-radius: 50%;
  width: 25%;
  max-width: 250px;
  margin-top: 4rem;
  box-shadow: var(--box-shadow);
}

/* Section base styling */
.solid-bg {
  color: var(--text-light-color);
  background: var(--accent-dark-2);
  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 56 28' width='56' height='28'%3E%3Cpath fill='%23457b9d' fill-opacity='0.1' d='M56 26v2h-7.75c2.3-1.27 4.94-2 7.75-2zm-26 2a2 2 0 1 0-4 0h-4.09A25.98 25.98 0 0 0 0 16v-2c.67 0 1.34.02 2 .07V14a2 2 0 0 0-2-2v-2a4 4 0 0 1 3.98 3.6 28.09 28.09 0 0 1 2.8-3.86A8 8 0 0 0 0 6V4a9.99 9.99 0 0 1 8.17 4.23c.94-.95 1.96-1.83 3.03-2.63A13.98 13.98 0 0 0 0 0h7.75c2 1.1 3.73 2.63 5.1 4.45 1.12-.72 2.3-1.37 3.53-1.93A20.1 20.1 0 0 0 14.28 0h2.7c.45.56.88 1.14 1.29 1.74 1.3-.48 2.63-.87 4-1.15-.11-.2-.23-.4-.36-.59H26v.07a28.4 28.4 0 0 1 4 0V0h4.09l-.37.59c1.38.28 2.72.67 4.01 1.15.4-.6.84-1.18 1.3-1.74h2.69a20.1 20.1 0 0 0-2.1 2.52c1.23.56 2.41 1.2 3.54 1.93A16.08 16.08 0 0 1 48.25 0H56c-4.58 0-8.65 2.2-11.2 5.6 1.07.8 2.09 1.68 3.03 2.63A9.99 9.99 0 0 1 56 4v2a8 8 0 0 0-6.77 3.74c1.03 1.2 1.97 2.5 2.79 3.86A4 4 0 0 1 56 10v2a2 2 0 0 0-2 2.07 28.4 28.4 0 0 1 2-.07v2c-9.2 0-17.3 4.78-21.91 12H30zM7.75 28H0v-2c2.81 0 5.46.73 7.75 2zM56 20v2c-5.6 0-10.65 2.3-14.28 6h-2.7c4.04-4.89 10.15-8 16.98-8zm-39.03 8h-2.69C10.65 24.3 5.6 22 0 22v-2c6.83 0 12.94 3.11 16.97 8zm15.01-.4a28.09 28.09 0 0 1 2.8-3.86 8 8 0 0 0-13.55 0c1.03 1.2 1.97 2.5 2.79 3.86a4 4 0 0 1 7.96 0zm14.29-11.86c1.3-.48 2.63-.87 4-1.15a25.99 25.99 0 0 0-44.55 0c1.38.28 2.72.67 4.01 1.15a21.98 21.98 0 0 1 36.54 0zm-5.43 2.71c1.13-.72 2.3-1.37 3.54-1.93a19.98 19.98 0 0 0-32.76 0c1.23.56 2.41 1.2 3.54 1.93a15.98 15.98 0 0 1 25.68 0zm-4.67 3.78c.94-.95 1.96-1.83 3.03-2.63a13.98 13.98 0 0 0-22.4 0c1.07.8 2.09 1.68 3.03 2.63a9.99 9.99 0 0 1 16.34 0z'%3E%3C/path%3E%3C/svg%3E");
}

.section-container {
  width: 95vw;
  padding: 1rem 1.5rem;
  box-sizing: border-box;
}

/*  Section: Project */
.projects-container {
  display: grid;
  grid-template-columns: repeat(12, 1fr);
  grid-template-rows: repeat(12, 1fr);
  grid-gap: 1rem;
  width: 100%;
}

.project {
  background: var(--accent-dark-1);
  height: 400px;
  width: 100%;
  position: relative;
  grid-column: span 6;
  grid-row: span 6;
  border-radius: var(--box-rounded-corners);
}

.project-link {
  height: 100%;
  width: 100%;
  object-fit: cover;
}

.project-img {
  height: 100%;
  width: 100%;
  object-fit: cover;
  border-radius: var(--box-rounded-corners);
}

.project-info {
  display: flex;
  flex-flow: column nowrap;
  justify-content: center;
  align-items: center;
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  background: rgba(0, 0, 0, 0.75);
  padding: 1rem;
  box-sizing: border-box;
  border-radius: var(--box-rounded-corners);
}

.project-mention {
  margin: 0;
}

.project-tools {
  width: 100%;
  margin-top: 1rem;
}

.project-tools i {
  margin: 0 1rem;
  font-size: 2rem;
}

/* Section: About */
.recommendation {
  margin-bottom: 2rem;
  display: flex;
  flex-flow: column nowrap;
  justify-content: center;
  align-items: center;

  color: var(--text-light-color);
  padding: 1rem;
  border-radius: var(--box-rounded-corners);
  box-shadow: var(--box-shadow);
  width: 40vw;

  font-size: 90%;
  transition: all 2s;
}

.recommendation h3,
h4 {
  margin: 0;
}

.recommendation-container {
  display: grid;
  grid-template-columns: 1fr 1fr;
  padding: 1rem;
}

.recommendation-text {
  display: flex;
  flex-flow: column nowrap;
  justify-content: center;
  align-items: center;
  height: 100%;
}

.recommendation-img {
  width: 75%;
  box-shadow: var(--box-shadow);
  border-radius: var(--box-rounded-corners);
}

.recommendation-btn {
  background: var(--accent-light-1);
  padding: 1rem;
  border-radius: var(--box-rounded-corners);
  box-shadow: var(--box-shadow);
}

.recommendation-links {
  margin-top: 1rem;
}

.recommendation-links i {
  font-size: 2rem;
}

.recommendation-fade-in {
  animation: fade-in;
}

.recommendation-fade-out {
  animation: fade-out;
}

.btn:hover {
  transform: translateY(-2px);
  filter: brightness(110%);
}

.btn:active {
  transform: translateY(2px);
  box-shadow: 0;
}

.fa-fast-forward {
  margin-left: 5px;
}

/* Section: Contact */
.contact {
  display: flex;
  flex-flow: column nowrap;
  justify-content: center;
  align-items: center;
}

.contact-links {
  display: flex;
  flex-flow: row nowrap;
  justify-content: space-around;
}

.page-link {
  font-size: 4rem;
  margin: 0 1rem;
  transition: all 0.2s;
}

.page-link:hover {
  color: var(--accent-light-1);
}

/* Utility classes */
.bold {
  font-weight: bold;
}

.italic {
  font-style: italic;
}

/* Animations */
@keyframes slide-in-left {
  from {
    opacity: 0;
    transform: translateX(-100%);
  }

  to {
    opacity: 1;
    transform: translateX(0);
  }
}

@keyframes fade-in {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

@keyframes fade-out {
  from {
    opacity: 1;
  }
  to {
    opacity: 0;
  }
}

/* Media queries */
/* Screens below 800px */
@media screen and (max-width: 800px) {
  html {
    font-size: 80%;
  }

  .navbar {
    flex-flow: column nowrap;
  }

  .navbar-brand {
    display: flex;
    flex-flow: row nowrap;
    justify-content: space-between;
    align-items: center;
    width: 100%;
    padding: 1rem;
    box-sizing: border-box;
  }

  #navbar-toggle {
    display: block;
  }

  .navbar-contents {
    background: var(--accent-dark-2);
    flex-flow: column nowrap;
    width: 100%;
  }

  .navbar-item:nth-child(1) {
    animation: slide-in-left 0.1s;
  }
  .navbar-item:nth-child(2) {
    animation: slide-in-left 0.2s;
  }
  .navbar-item:nth-child(3) {
    animation: slide-in-left 0.3s;
  }
  .navbar-item:nth-child(4) {
    animation: slide-in-left 0.4s;
  }

  .navbar-item:hover {
    background: var(--accent-light-1);
  }

  .header-img {
    width: 50%;
  }

  .project {
    grid-column: span 12;
    grid-row: span 6;
  }

  .recommendation {
    width: 80vw;
  }

  .recommendation-container {
    display: grid;
    grid-template-columns: 1fr;
  }

  .recommendation-img {
    height: 200px;
    width: auto;
  }

  .recommendation-text {
    padding: 1rem;
  }
}

